# fetch-url-raw

./: .gitignore  README.md  design.md  pyproject.toml
src/fetch_url_raw/: __init__.py  __main__.py  config.py  dns.py  errors.py  fetch.py  network_policy.py  server.py  tlsinfo.py
tests/: test_cli.py  test_dns.py  test_fetch.py  test_live.py  test_network_policy.py  test_server.py
