[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fetch-url-raw"
version = "0.1.0"
description = "Stateless MCP server providing a raw HTTP fetch tool"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
  { name = "Codex" }
]
dependencies = [
  "mcp>=1.28.0",
  "httpx>=0.28.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.24",
]

[project.scripts]
fetch-url-raw = "fetch_url_raw.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/fetch_url_raw"]

[tool.hatch.build.targets.sdist]
include = [
  "src/fetch_url_raw",
  "tests",
  "design.md",
  "README.md",
  "pyproject.toml",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
